# project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data.json  docker-compose.yaml  docker-entrypoint.sh  insert_init_data.py  locustfile.py  pyproject.toml  template.env
core/: settings.py  urls.py
credit_charge/: admin.py  apps.py  consts.py  exceptions.py  factories.py  model_validators.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
credit_charge/migrations/: 0001_initial.py
src/tabdeal_project/: __init__.py
utils/: consts.py  models.py
